examples/errors/unif.spl


main() {
    var lijst = [];

    print("1234");
}